--- a/core/templates/core/common/header.html
+++ b/core/templates/core/common/header.html
@@ -5,7 +5,7 @@
 
             <!-- Logo container-->
             <div class="logo">
-                <a href="/" class="logo"><span> {% custom_site_name %} {{ online_count }}</span></a>
+                <a href="{% url 'core_index' %}" class="logo"><span> {% custom_site_name %}</span></a>
             </div>
             <!-- End Logo container-->
 
