--- a/core/templates/core/positions/index.html
+++ b/core/templates/core/positions/index.html
@@ -121,7 +121,7 @@
                 },
                 columns: [
                 {data: 'name', name: 'name'},
-                {data: 'created', name: 'created'},
+                {data: 'created_at', name: 'created_at'},
                 {data: 'action', name: 'action', orderable: false, searchable: false}
             ],
                 order: [[1, 'desc']]
