--- a/core/templates/core/positions/create.html
+++ b/core/templates/core/positions/create.html
@@ -1,20 +1,23 @@
-@extends('layouts.app')
+{% extends 'core/base.html' %}
+{% load staticfiles i18n %}
+{% load core_helper %}
 
-@section('styles')
+{% block styles %}
+    {{ block.super }}
     <!-- Plugins css-->
-    <link href="/vendor/ubold/assets/plugins/bootstrap-tagsinput/css/bootstrap-tagsinput.css" rel="stylesheet" />
-    <link href="/vendor/ubold/assets/plugins/switchery/css/switchery.min.css" rel="stylesheet" />
-    <link href="/vendor/ubold/assets/plugins/multiselect/css/multi-select.css"  rel="stylesheet" type="text/css" />
-    <link href="/vendor/ubold/assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="/vendor/ubold/assets/plugins/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet" />
-    <link href="/vendor/ubold/assets/plugins/bootstrap-touchspin/css/jquery.bootstrap-touchspin.min.css" rel="stylesheet" />
-@endsection
+    <link href="{% static "core/vendor/ubold/assets/plugins/bootstrap-tagsinput/css/bootstrap-tagsinput.css" %}" rel="stylesheet" />
+    <link href="{% static "core/vendor/ubold/assets/plugins/switchery/css/switchery.min.css" %}" rel="stylesheet" />
+    <link href="{% static "core/vendor/ubold/assets/plugins/multiselect/css/multi-select.css" %}"  rel="stylesheet" type="text/css" />
+    <link href="{% static "core/vendor/ubold/assets/plugins/select2/css/select2.min.css" %}" rel="stylesheet" type="text/css" />
+    <link href="{% static "core/vendor/ubold/assets/plugins/bootstrap-select/css/bootstrap-select.min.css" %}" rel="stylesheet" />
+    <link href="{% static "core/vendor/ubold/assets/plugins/bootstrap-touchspin/css/jquery.bootstrap-touchspin.min.css" %}" rel="stylesheet" />
+{% endblock %}
 
-@section('content')
+{% block content %}
     <div class="row">
         <div class="col-sm-12">
             <div class="btn-group pull-right m-t-15">
-                <a href="{{ route('positions.index') }}" class="btn btn-primary waves-effect waves-light"><span class="m-r-5"><i class="fa fa-list"></i></span> Danh sách</a>
+                <a href="{% url 'core_position_index' %}" class="btn btn-primary waves-effect waves-light"><span class="m-r-5"><i class="fa fa-list"></i></span> Danh sách</a>
             </div>
             <h4 class="page-title">Tạo mới Vị trí Banner</h4>
         </div>
@@ -25,55 +28,39 @@
             <div class="card-box">
                 <div class="row">
                     <div class="col-sm-12">
-                        {!! Form::open(['route' => ['positions.store'], 'method' => 'post', 'role' => 'form', 'class' => 'form-horizontal', 'files' => true]) !!}
-                        @include('layouts.partials.errors')
-
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Tên</label>
-                            <div class="col-md-9">
-                                {!! Form::text('name', null, ['id' => 'name', 'class' => 'form-control', 'placeholder' => 'Tên']) !!}
-                            </div>
-                        </div>
-
-
-
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label no-padding-right"></label>
-                            <div class="col-sm-9">
-                                <button type="submit" class="btn btn-success waves-effect waves-light">Lưu</button>
-                            </div>
-                        </div>
-                        {!! Form::close() !!}
+                        <form action="{% url 'core_position_create' %}" method="post" class="form-horizontal">
+                            {% include 'core/partials/form.html' with form=form %}
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-@endsection
+{%  endblock %}
 
-@section('scripts')
-    <script src="/vendor/ubold/assets/plugins/bootstrap-tagsinput/js/bootstrap-tagsinput.min.js"></script>
-    <script src="/vendor/ubold/assets/plugins/switchery/js/switchery.min.js"></script>
-    <script type="text/javascript" src="/vendor/ubold/assets/plugins/multiselect/js/jquery.multi-select.js"></script>
-    <script type="text/javascript" src="/vendor/ubold/assets/plugins/jquery-quicksearch/jquery.quicksearch.js"></script>
-    <script src="/vendor/ubold/assets/plugins/select2/js/select2.min.js" type="text/javascript"></script>
-    <script src="/vendor/ubold/assets/plugins/bootstrap-select/js/bootstrap-select.min.js" type="text/javascript"></script>
-    <script src="/vendor/ubold/assets/plugins/bootstrap-filestyle/js/bootstrap-filestyle.min.js" type="text/javascript"></script>
-    <script src="/vendor/ubold/assets/plugins/bootstrap-touchspin/js/jquery.bootstrap-touchspin.min.js" type="text/javascript"></script>
-    <script src="/vendor/ubold/assets/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" type="text/javascript"></script>
+{% block scripts %}
+    {{ block.super }}
+    <script src="{% static "core/vendor/ubold/assets/plugins/bootstrap-tagsinput/js/bootstrap-tagsinput.min.js" %}"></script>
+    <script src="{% static "core/vendor/ubold/assets/plugins/switchery/js/switchery.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/plugins/multiselect/js/jquery.multi-select.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/plugins/jquery-quicksearch/jquery.quicksearch.js" %}"></script>
+    <script src="{% static "core/vendor/ubold/assets/plugins/select2/js/select2.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "core/vendor/ubold/assets/plugins/bootstrap-select/js/bootstrap-select.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "core/vendor/ubold/assets/plugins/bootstrap-filestyle/js/bootstrap-filestyle.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "core/vendor/ubold/assets/plugins/bootstrap-touchspin/js/jquery.bootstrap-touchspin.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "core/vendor/ubold/assets/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" %}" type="text/javascript"></script>
 
-    <script type="text/javascript" src="/vendor/ubold/assets/plugins/autocomplete/jquery.mockjax.js"></script>
-    <script type="text/javascript" src="/vendor/ubold/assets/plugins/autocomplete/jquery.autocomplete.min.js"></script>
-    <script type="text/javascript" src="/vendor/ubold/assets/plugins/autocomplete/countries.js"></script>
-    <script type="text/javascript" src="/vendor/ubold/assets/pages/autocomplete.js"></script>
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/plugins/autocomplete/jquery.mockjax.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/plugins/autocomplete/jquery.autocomplete.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/plugins/autocomplete/countries.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/pages/autocomplete.js" %}"></script>
 
-    <script type="text/javascript" src="/vendor/ubold/assets/pages/jquery.form-advanced.init.js"></script>
-@endsection
+    <script type="text/javascript" src="{% static "core/vendor/ubold/assets/pages/jquery.form-advanced.init.js" %}"></script>
 
-@section('inline_scripts')
+
     <script>
         (function($){
             $('.select2').select2();
         })(jQuery);
     </script>
-@endsection
+{% endblock %}
