--- a/core/templates/core/positions/edit.html
+++ b/core/templates/core/positions/edit.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="btn-group pull-right m-t-15">
-                <a href="{% url 'core_position_index' %}" class="btn btn-primary waves-effect waves-light"><span class="m-r-5"><i class="fa fa-list"></i></span> Danh sách</a>
+                <a href="{% url 'core:position_index' %}" class="btn btn-primary waves-effect waves-light"><span class="m-r-5"><i class="fa fa-list"></i></span> Danh sách</a>
             </div>
             <h4 class="page-title">Chỉnh sửa Vị trí Banner</h4>
         </div>
@@ -28,7 +28,7 @@
             <div class="card-box">
                 <div class="row">
                     <div class="col-sm-12">
-                        <form action="{% url 'core_position_edit' content.id %}" method="post" class="form-horizontal">
+                        <form action="" method="post" class="form-horizontal">
                             {% include 'core/partials/form.html' with form=form %}
                         </form>
                     </div>
